--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -55,20 +55,18 @@ CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_DIM=y
-CONFIG_IGC_RX_POLL=y         
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_IRQ_FORCED_THREADING=y   
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=y
 CONFIG_XPS=y 
 CONFIG_RPS=y                    
 CONFIG_RFS=y                        
 CONFIG_RFS_ACCEL=y              
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_DEFAULT=100
+CONFIG_NET_RX_BUSY_POLL_DEFAULT=200
 
 # ======================
 # 内存管理优化（8GB低开销）
@@ -80,13 +78,11 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y 
 CONFIG_SLUB_DEBUG=n
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=16
-CONFIG_SLUB_MEMCG_SYSFS_ON=n
-CONFIG_PAGE_POOL_STATS=n
 
 # ======================
 # 网络协议栈高性能配置
 # ======================
-CONFIG_TCP_CONG_BBR=y    
+CONFIG_TCP_CONG_BBR3=y    
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y         
 CONFIG_TCP_FASTOPEN=y
@@ -97,14 +93,10 @@ CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_FQ=y
 CONFIG_XDP_SOCKETS=y
-CONFIG_TCP_NOTSENT_LOWAT=16384           
+CONFIG_TCP_NOTSENT_LOWAT=16384
 CONFIG_NET_SCH_MQPRIO=n
 CONFIG_IP_ADVANCED_ROUTER=y  
 CONFIG_IP_MULTIPLE_TABLES=y  
-CONFIG_TCP_BPF=n           
-CONFIG_TCP_ZERO_COPY_RECEIVE=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_EGRESS=y
 
 # ======================
 # Netfilter/NAT硬件卸载
@@ -202,12 +194,8 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_bpftool=y
-CONFIG_PACKAGE_bpf-trace=y
-CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_libbpf-extra=y
 
 # ======================
 # LuCI应用配置 (精简实用)
