--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -26,7 +26,7 @@ CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 
 # ======================
-# x86架构核心优化
+# x86架构核心优化（修复重复）
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -34,19 +34,16 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-CONFIG_SCHED_MC=y
-CONFIG_SCHED_SMT=y
-CONFIG_PREEMPT_VOLUNTARY=n
-CONFIG_PREEMPT=y
-CONFIG_HZ=1000
-CONFIG_HZ_1000=y
-
-# ======================
-# Intel硬件深度优化（J4125+I226）
-# ======================
+# 修复：统一使用Intel P-State并启用HWP
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_SMT=n
+
+# ======================
+# Intel硬件深度优化（降低开销）
+# ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y                      
 CONFIG_IGC_RX_NAPI=y
@@ -54,37 +51,36 @@ CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y
+CONFIG_IGC_DIM=n
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_IRQ_FORCED_THREADING=y   
+CONFIG_IRQ_DOMAIN_HIERARCHY=n
+CONFIG_IRQ_FORCED_THREADING=n
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
-CONFIG_XPS=y 
+CONFIG_XPS=y
 CONFIG_RPS=y                    
-CONFIG_RFS=y                        
-CONFIG_RFS_ACCEL=y              
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_DEFAULT=200
+CONFIG_RFS=n
+CONFIG_RFS_ACCEL=n             
+CONFIG_NET_RX_BUSY_POLL=n
 
 # ======================
-# 内存管理优化（8GB低开销）
+# 内存管理优化（保持一致）
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_PAGE_POOL=y                
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y 
-CONFIG_SLUB_DEBUG=n
+CONFIG_PAGE_POOL=y 
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=16
+CONFIG_TRANSPARENT_HUGEPAGE=n
+CONFIG_SLUB_DEBUG=n
+CONFIG_ZSMALLOC=n
 
 # ======================
-# 网络协议栈高性能配置
+# 网络协议栈高性能配置（移除重复）
 # ======================
 CONFIG_TCP_CONG_BBR3=y    
 CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y         
+CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_PACKET=y                
 CONFIG_SYN_COOKIES=y              
@@ -92,14 +88,16 @@ CONFIG_UDP_GRO=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_FQ=y
-CONFIG_XDP_SOCKETS=y
 CONFIG_TCP_NOTSENT_LOWAT=16384
 CONFIG_NET_SCH_MQPRIO=n
 CONFIG_IP_ADVANCED_ROUTER=y  
 CONFIG_IP_MULTIPLE_TABLES=y  
+CONFIG_INET_DIAG=n
+CONFIG_INET_TCP_DIAG=n
+CONFIG_INET_UDP_DIAG=n
 
 # ======================
-# Netfilter/NAT硬件卸载
+# Netfilter/NAT优化（保持不变）
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -110,62 +108,16 @@ CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_NETDEV=y        
 CONFIG_NFT_NAT=y
 CONFIG_NFT_MASQ=y
+CONFIG_NFT_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_FLOW_OFFLOAD=y  
 CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_EVENTS=n
 CONFIG_NF_CONNTRACK_TIMEOUT=y
+CONFIG_NF_CONNTRACK_PROCFS=n
+CONFIG_NF_CONNTRACK_SECMARK=n
 
 # ======================
-# BPF/eBPF完整配置
-# ======================
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_BPF_STREAM_PARSER=y
-CONFIG_BPF_LSM=y
-CONFIG_BPF_PRELOAD=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO_BTF_MODULES=y
-CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
-CONFIG_CGROUP_BPF=y
-CONFIG_BPF_LIRC_MODE2=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_BPFILTER=y
-CONFIG_BPFILTER_UMH=y
-CONFIG_LWTUNNEL_BPF=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_EGRESS=y
-CONFIG_NET_XGRESS=y
-CONFIG_BPF_KPROBE_OVERRIDE=y
-
-# ======================
-# XDP完整配置
-# ======================
-CONFIG_XDP_SOCKETS=y
-CONFIG_KERNEL_XDP_SOCKETS=y
-CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
-CONFIG_XDP_OFFLOAD=y
-CONFIG_XDP_TX=y
-CONFIG_XDP_REDIRECT=y
-CONFIG_XDP_FRAME=y
-CONFIG_XSK_BUFF_ALLOC=y
-CONFIG_XSK_BATCHED_DESC=y
-CONFIG_XSK_GEN_RX_SUPPORT=y
-CONFIG_XSK_GEN_TX_SUPPORT=y
-CONFIG_NET_XDP=y
-CONFIG_NET_XDP_GENERIC=y
-CONFIG_NET_XDP_SOCKETS=y
-CONFIG_NET_XDP_UMEM=y
-CONFIG_NET_XDP_UMEM_DMA=y
-
-# ======================
-# 必要内核模块（精简版）
+# 精简内核模块配置（移除重复模块）
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y     
 CONFIG_PACKAGE_kmod-nft-core=y
@@ -175,16 +127,11 @@ CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y          
 CONFIG_PACKAGE_kmod-nf-flow-table=y
-CONFIG_PACKAGE_kmod-bpfilter=y
-CONFIG_PACKAGE_kmod-xdp-sockets=y
-CONFIG_PACKAGE_kmod-xdp-tools=y
-CONFIG_PACKAGE_kmod-xdp-umem=y
-CONFIG_PACKAGE_kmod-xdp-redirect=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-fq_codel=y
 CONFIG_PACKAGE_kmod-ifb=y
-
+CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
 # 用户态工具（性能监控/调优）
@@ -194,8 +141,6 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libxdp=y
 
 # ======================
 # LuCI应用配置 (精简实用)
@@ -205,19 +150,29 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-upnp=y
 
 # ======================
-# 生产环境调试精简
+# 生产环境优化配置
 # ======================
-CONFIG_DEBUG_INFO=n               # 关闭调试符号减少内存
-CONFIG_SLUB_DEBUG=n               # 关闭SLUB调试
-CONFIG_PROFILING=n                # 关闭性能剖析
-CONFIG_NET_DROP_MONITOR=n         # 关闭丢包监控
-CONFIG_FTRACE=n                   # 关闭跟踪框架
-CONFIG_KPROBES=n                  # 关闭探测点
+CONFIG_DEBUG_INFO=n
+CONFIG_SLUB_DEBUG=n
+CONFIG_PROFILING=n
+CONFIG_NET_DROP_MONITOR=n
+CONFIG_FTRACE=n
+CONFIG_KPROBES=n
 CONFIG_DEBUG_KERNEL=n
 CONFIG_DEBUG_MISC=n
 CONFIG_DEBUG_LIST=n
-CONFIG_BPF_SYSCALL_DEBUG=n
-CONFIG_BPF_JIT_DEBUG=n
-CONFIG_TEST_BPF=n
+CONFIG_GDB_SCRIPTS=n
+CONFIG_DEBUG_FS=n
+CONFIG_STACKTRACE=n
+CONFIG_KALLSYMS=n
+CONFIG_SOUND=n
+CONFIG_HID=n
+CONFIG_NVMEM=n
+CONFIG_REGMAP_SPI=n
+CONFIG_WLAN_VENDOR_INTEL=n
+CONFIG_WLAN_VENDOR_ATH=n
+CONFIG_BT=n
+CONFIG_RFKILL=n
