--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -8,7 +8,10 @@ CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_EXT4_JOURNAL=y
 CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_GRUB_TIMEOUT=2
 
 # ======================
 # 编译工具链与优化
@@ -24,6 +27,7 @@ CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
+CONFIG_USE_MKLIBS=n
 
 # ======================
 # x86架构核心配置
@@ -35,11 +39,15 @@ CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 CONFIG_SCHED_BPF=y
+CONFIG_MTRR=y
+CONFIG_X86_INTEL_LPSS=y
+CONFIG_ACPI_CPPC_CPUFREQ=y
 
 # ======================
 # Intel硬件优化 (J4125+I226)
@@ -69,6 +77,7 @@ CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTE=256
+CONFIG_CMA_SIZE_PERCENTAGE=20
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_GENERIC_IRQ_MIGRATION=y
@@ -85,14 +94,20 @@ CONFIG_PAGE_POOL=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_ZSMALLOC=n
+CONFIG_ZSWAP=y
+CONFIG_ZSWAP_COMPRESSOR_DEFAULT=lz4
+CONFIG_ZSWAP_ZPOOL_DEFAULT=zsmalloc
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_ARCH_HAS_PREFETCH=y
 CONFIG_ARCH_HAS_PREFETCHW=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 
 # ======================
 # 网络协议栈优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
+CONFIG_KERNEL_TCP_CONG_BBR=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
@@ -115,6 +130,11 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_INET_ESP=y
+CONFIG_INET_IPCOMP=y
+CONFIG_TCP_MD5SIG=y
+CONFIG_NET_UDP_TUNNEL=y
+CONFIG_NET_FOU=y
 
 # ======================
 # Netfilter/NAT配置
@@ -122,14 +142,18 @@ CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_EVENTS=n
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
 CONFIG_NF_CONNTRACK_TIMEOUT=y
 CONFIG_NF_CONNTRACK_PROCFS=n
 CONFIG_NF_CONNTRACK_SECMARK=n
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
 CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NFT_NAT=y
 CONFIG_NFT_MASQ=y
@@ -139,8 +163,9 @@ CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
-CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_MARK=y
+CONFIG_NETFILTER_XT_CONNMARK=y
 
 # ======================
 # BPF/eBPF系统配置
@@ -176,28 +201,23 @@ CONFIG_NET_XGRESS=y
 # ======================
 CONFIG_XDP_SOCKETS=y
 CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_XDP_OFFLOAD=y
-CONFIG_XDP_TX=y
-CONFIG_XDP_REDIRECT=y
-CONFIG_XDP_FRAME=y
 CONFIG_XSK_BUFF_ALLOC=y
 CONFIG_XSK_BATCHED_DESC=y
 CONFIG_XSK_GEN_RX_SUPPORT=y
 CONFIG_XSK_GEN_TX_SUPPORT=y
 CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
 CONFIG_NET_XDP=y
-CONFIG_NET_XDP_GENERIC=y
 CONFIG_NET_XDP_SOCKETS=y
 CONFIG_NET_XDP_UMEM=y
 CONFIG_NET_XDP_UMEM_DMA=y
 CONFIG_NET_XDP_UMEM_ALIGNMENT=8
 CONFIG_NET_DEVLINK=y
-CONFIG_KERNEL_XDP_SOCKETS=y
 
 # ======================
 # 内核模块配置
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-tcp-bbr2=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
@@ -205,10 +225,14 @@ CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-natredirect=y
 CONFIG_PACKAGE_kmod-nf-flow-table=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
+CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
@@ -218,19 +242,34 @@ CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-crypto-crc32c-intel=y
+CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=y
+CONFIG_PACKAGE_kmod-dma-buf-heaps=y
+CONFIG_PACKAGE_kmod-dma-buf-heaps-cma=y
 
 # ======================
 # 用户态工具包
 # ======================
 CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_ethtool-full=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3-ssl=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
 CONFIG_PACKAGE_bpf-headers=y
 CONFIG_PACKAGE_ucode-mod-bpf=y
+CONFIG_PACKAGE_xdp-tools=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_sysstat=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_ca-certificates=y
 
 # ======================
 # LuCI应用模块
@@ -241,6 +280,26 @@ CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+
+# ======================
+# 系统基础组件
+# ======================
+CONFIG_PACKAGE_blockd=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_pciutils=y
+CONFIG_PACKAGE_attr=y
+CONFIG_PACKAGE_acl=y
+CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_e2fsprogs=y
+CONFIG_PACKAGE_f2fs-tools=y
+CONFIG_PACKAGE_f2fsck=y
+CONFIG_PACKAGE_mkf2fs=y
 
 # ======================
 # 内核调试与诊断
@@ -272,6 +331,12 @@ CONFIG_WLAN_VENDOR_INTEL=n
 CONFIG_WLAN_VENDOR_ATH=n
 CONFIG_BT=n
 CONFIG_RFKILL=n
+CONFIG_USB_SERIAL=n
+CONFIG_USB_STORAGE=n
+CONFIG_SCSI=n
+CONFIG_ATA=n
+CONFIG_MMC=n
+CONFIG_RTC_CLASS=n
 
 # ======================
 # 系统安全加固
@@ -285,6 +350,12 @@ CONFIG_IO_STRICT_DEVMEM=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_SECURITY=y
+CONFIG_SECURITY_APPARMOR=y
+CONFIG_STATIC_USERMODEHELPER=y
+CONFIG_SLAB_MERGE_DEFAULT=n
+CONFIG_INIT_STACK_ALL=y
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 
 # ======================
 # 内核子系统配置
@@ -293,3 +364,35 @@ CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_CGROUP_BPF=y
 CONFIG_KERNEL_BPF_EVENTS=y
 CONFIG_BPF_TOOLCHAIN_HOST=y
+CONFIG_KERNEL_NAMESPACES=y
+CONFIG_KERNEL_UTS_NS=y
+CONFIG_KERNEL_IPC_NS=y
+CONFIG_KERNEL_USER_NS=y
+CONFIG_KERNEL_PID_NS=y
+CONFIG_KERNEL_NET_NS=y
+
+# ======================
+# 文件系统支持
+# ======================
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y
+CONFIG_PACKAGE_kmod-fs-squashfs=y
+CONFIG_PACKAGE_kmod-fuse=y
+CONFIG_PACKAGE_kmod-fs-autofs4=y
+
+# ======================
+# 网络服务配置
+# ======================
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_tftp=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
