--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -15,6 +15,8 @@ CONFIG_GRUB_TIMEOUT=2
 # ======================
 # 编译工具链与优化
 # ======================
+CONFIG_DEVEL=y
+CONFIG_TOOLCHAINOPTS=y
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
@@ -25,7 +27,7 @@ CONFIG_CC_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llc;opt;llvm-objdump"
 CONFIG_USE_MKLIBS=n
 
 # ======================
@@ -37,8 +39,13 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=n
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=n
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
@@ -47,6 +54,7 @@ CONFIG_SCHED_BPF=y
 CONFIG_MTRR=y
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_ACPI_CPPC_CPUFREQ=y
+CONFIG_X86_AMD_PSTATE=n
 
 # ======================
 # 内存管理优化 (无压缩 - 8GB专用)
@@ -82,6 +90,8 @@ CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE_PUD=y
 CONFIG_COMPACTION=n
 CONFIG_MIGRATION=n
+CONFIG_HUGETLBFS=n
+CONFIG_HUGETLB_PAGE=n
 
 # ======================
 # Intel硬件优化 (J4125+I226)
@@ -112,6 +122,8 @@ CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
+CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI_PCIE=y
 
 # ======================
 # 网络协议栈优化
@@ -148,6 +160,8 @@ CONFIG_NET_FOU=y
 CONFIG_NET_IP_TUNNEL=y
 CONFIG_NET_IPGRE=y
 CONFIG_NET_IPGRE_BROADCAST=y
+CONFIG_NET_IPVTI=y
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 
 # ======================
 # Netfilter/NAT配置
@@ -201,6 +215,15 @@ CONFIG_NF_CONNTRACK_ACCT=y
 CONFIG_NF_CONNTRACK_TSTAMP=y
 CONFIG_NF_CONNTRACK_LABELS=y
 CONFIG_NF_CONNTRACK_RTCACHE=y
+CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
+CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=n
+CONFIG_NETFILTER_XT_TARGET_CT=y
+CONFIG_NETFILTER_XT_TARGET_DSCP=y
+CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_NETFILTER_XT_TARGET_LED=y
+CONFIG_NETFILTER_XT_TARGET_NOTRACK=n
+CONFIG_NETFILTER_XT_TARGET_TEE=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
 
 # ======================
 # BPF/eBPF系统配置
@@ -290,6 +313,22 @@ CONFIG_PACKAGE_kmod-ipt-socket=y
 CONFIG_PACKAGE_kmod-ipt-time=y
 CONFIG_PACKAGE_kmod-ipt-hashlimit=y
 CONFIG_PACKAGE_kmod-ipt-iprange=y
+CONFIG_PACKAGE_kmod-ipt-account=y
+CONFIG_PACKAGE_kmod-ipt-connmark=y
+CONFIG_PACKAGE_kmod-ipt-conntrack=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-ipt-filter=y
+CONFIG_PACKAGE_kmod-ipt-ulog=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-ipvs=y
+CONFIG_PACKAGE_kmod-ipt-led=y
+CONFIG_PACKAGE_kmod-ipt-tarpit=y
+CONFIG_PACKAGE_kmod-ipt-tee=y
+CONFIG_PACKAGE_kmod-ipt-tproxy=y
+CONFIG_PACKAGE_kmod-ipt-ts3init=y
+CONFIG_PACKAGE_kmod-ipt-u32=y
 
 # ======================
 # 加密与硬件加速
@@ -298,6 +337,20 @@ CONFIG_PACKAGE_kmod-crypto-crc32c-intel=y
 CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=y
 CONFIG_PACKAGE_kmod-dma-buf-heaps=y
 CONFIG_PACKAGE_kmod-dma-buf-heaps-cma=y
+CONFIG_PACKAGE_kmod-crypto-aead=y
+CONFIG_PACKAGE_kmod-crypto-ccm=y
+CONFIG_PACKAGE_kmod-crypto-cmac=y
+CONFIG_PACKAGE_kmod-crypto-ctr=y
+CONFIG_PACKAGE_kmod-crypto-ecb=y
+CONFIG_PACKAGE_kmod-crypto-gcm=y
+CONFIG_PACKAGE_kmod-crypto-gf128=y
+CONFIG_PACKAGE_kmod-crypto-ghash=y
+CONFIG_PACKAGE_kmod-crypto-hmac=y
+CONFIG_PACKAGE_kmod-crypto-null=y
+CONFIG_PACKAGE_kmod-crypto-sha1=y
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-crypto-sha512=y
+CONFIG_PACKAGE_kmod-crypto-user=y
 
 # ======================
 # 用户态工具包
@@ -322,10 +375,7 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
-
-# ======================
-# OpenAppFilter 工具包
-# ======================
+CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipset-tools=y
 CONFIG_PACKAGE_libipset=y
@@ -335,6 +385,7 @@ CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libpcre2=y
 
 # ======================
 # LuCI应用模块
@@ -365,6 +416,10 @@ CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_mkf2fs=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_lscpu=y
+CONFIG_PACKAGE_lsb-release=y
 
 # ======================
 # 内核调试与诊断
@@ -402,6 +457,10 @@ CONFIG_SCSI=n
 CONFIG_ATA=n
 CONFIG_MMC=n
 CONFIG_RTC_CLASS=n
+CONFIG_FB=n
+CONFIG_VGA_ARB=n
+CONFIG_DRM=n
+CONFIG_AGP=n
 
 # ======================
 # 系统安全加固
@@ -421,6 +480,7 @@ CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_SLAB_MERGE_DEFAULT=n
 CONFIG_INIT_STACK_ALL=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_RANDOMIZE_BASE=n
 
 # ======================
 # 内核子系统配置
@@ -435,6 +495,11 @@ CONFIG_KERNEL_IPC_NS=y
 CONFIG_KERNEL_USER_NS=y
 CONFIG_KERNEL_PID_NS=y
 CONFIG_KERNEL_NET_NS=y
+CONFIG_KERNEL_CGROUP_DEVICE=y
+CONFIG_KERNEL_CGROUP_FREEZER=y
+CONFIG_KERNEL_CGROUP_NET_PRIO=y
+CONFIG_KERNEL_CGROUP_PERF=y
+CONFIG_KERNEL_CGROUP_SCHED=y
 
 # ======================
 # 文件系统支持
@@ -446,6 +511,12 @@ CONFIG_PACKAGE_kmod-fs-ntfs=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-fuse=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
+CONFIG_PACKAGE_kmod-fs-btrfs=y
+CONFIG_PACKAGE_kmod-fs-isofs=y
+CONFIG_PACKAGE_kmod-fs-nfs=y
+CONFIG_PACKAGE_kmod-fs-nfs-common=y
+CONFIG_PACKAGE_kmod-fs-nfs-v3=y
+CONFIG_PACKAGE_kmod-fs-nfs-v4=y
 
 # ======================
 # 网络服务配置
@@ -457,7 +528,31 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsmasq_full_connmark=y
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_ppp=y
 CONFIG_PACKAGE_ppp-mod-pppoe=y
+CONFIG_PACKAGE_ppp-mod-pptp=y
+CONFIG_PACKAGE_ppp-mod-pppol2tp=y
+
+# ======================
+# 基础系统配置
+# ======================
+CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_USE_INITTAB=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=100
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY=y
+CONFIG_BUSYBOX_CONFIG_HUSH=y
+CONFIG_BUSYBOX_CONFIG_HUSH_HELP=y
+CONFIG_BUSYBOX_CONFIG_HUSH_INTERACTIVE=y
+CONFIG_BUSYBOX_CONFIG_HUSH_JOB=y
+CONFIG_BUSYBOX_CONFIG_HUSH_TICK=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_IF=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_LOOPS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_FUNCTIONS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_LOCAL=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_RANDOM_SUPPORT=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_EXPORT_N=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_MODE_X=y
