--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -57,11 +57,11 @@ CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_X86_AMD_PSTATE=n
 
 # ======================
-# 内存管理优化 (无压缩 - 8GB专用)
+# 内存管理优化 (8GB专用)
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=64
 CONFIG_SLUB_DEBUG=n
 CONFIG_PAGE_POOL=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
@@ -77,17 +77,12 @@ CONFIG_SWAP=n
 CONFIG_FRONTSWAP=n
 CONFIG_CLEANCACHE=n
 CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=128
+CONFIG_CMA_SIZE_MBYTE=256
 CONFIG_CMA_SIZE_PERCENTAGE=10
 CONFIG_DMA_CMA=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_ARCH_HAS_PREFETCH=y
 CONFIG_ARCH_HAS_PREFETCHW=y
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
-CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
-CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE_PUD=y
 CONFIG_COMPACTION=n
 CONFIG_MIGRATION=n
 CONFIG_HUGETLBFS=n
@@ -119,7 +114,6 @@ CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_DMA_DIRECT_REMAP=y
-CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_PCIEPORTBUS=y
@@ -131,8 +125,8 @@ CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_KERNEL_TCP_CONG_BBR2=y
 CONFIG_KERNEL_TCP_CONG_BBR=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_NET_SCH_DEFAULT=n
+CONFIG_DEFAULT_FQ_CODEL=n
 CONFIG_TCP_FASTOPEN=y
 CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
@@ -161,6 +155,14 @@ CONFIG_NET_IP_TUNNEL=y
 CONFIG_NET_IPGRE=y
 CONFIG_NET_IPGRE_BROADCAST=y
 CONFIG_NET_IPVTI=y
+
+# ======================
+# TCP连接优化
+# ======================
+CONFIG_TCP_KEEPALIVE_INTVL=30
+CONFIG_TCP_KEEPALIVE_PROBES=3
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR2=y
 
 # ======================
 # Netfilter/NAT配置 (仅保留nftables)
@@ -207,8 +209,6 @@ CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 CONFIG_BPF_KPROBE_OVERRIDE=y
 CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
 CONFIG_BPF_PRELOAD_UMD=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO_BTF_MODULES=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
@@ -264,7 +264,7 @@ CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 
 # ======================
-# 加密与硬件加速 (优化版)
+# 加密与硬件加速
 # ======================
 CONFIG_PACKAGE_kmod-crypto-crc32c-intel=y
 CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=y
@@ -313,7 +313,7 @@ CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpcre2=y
 
 # ======================
-# LuCI应用模块
+# LuCI应用模块 (保留文件管理)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -342,53 +342,11 @@ CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_lsb-release=y
 
 # ======================
-# 内核调试与诊断
-# ======================
-CONFIG_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_KERNEL=n
-CONFIG_DEBUG_FS=n
-CONFIG_DEBUG_MISC=n
-CONFIG_DEBUG_LIST=n
-CONFIG_STACKTRACE=n
-CONFIG_KALLSYMS=n
-CONFIG_GDB_SCRIPTS=n
-CONFIG_PROFILING=n
-CONFIG_FTRACE=n
-CONFIG_KPROBES=n
-CONFIG_NET_DROP_MONITOR=n
-
-# ======================
-# 硬件驱动精简
-# ======================
-CONFIG_SOUND=n
-CONFIG_HID=n
-CONFIG_NVMEM=n
-CONFIG_REGMAP_SPI=n
-CONFIG_WLAN_VENDOR_INTEL=n
-CONFIG_WLAN_VENDOR_ATH=n
-CONFIG_BT=n
-CONFIG_RFKILL=n
-CONFIG_USB_SERIAL=n
-CONFIG_USB_STORAGE=n
-CONFIG_SCSI=n
-CONFIG_ATA=n
-CONFIG_MMC=n
-CONFIG_RTC_CLASS=n
-CONFIG_FB=n
-CONFIG_VGA_ARB=n
-CONFIG_DRM=n
-CONFIG_AGP=n
-
-# ======================
-# 系统安全加固
+# 系统安全加固 (优化版)
 # ======================
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
@@ -396,15 +354,12 @@ CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_STRICT_DEVMEM=y
 CONFIG_IO_STRICT_DEVMEM=y
-CONFIG_REFCOUNT_FULL=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_APPARMOR=y
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_SLAB_MERGE_DEFAULT=n
 CONFIG_INIT_STACK_ALL=y
-CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_SLAB_MERGE_DEFAULT=n
 CONFIG_RANDOMIZE_BASE=n
 
 # ======================
@@ -427,7 +382,7 @@ CONFIG_KERNEL_CGROUP_PERF=y
 CONFIG_KERNEL_CGROUP_SCHED=y
 
 # ======================
-# 文件系统支持
+# 文件系统支持 (保留完整支持)
 # ======================
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
@@ -464,7 +419,6 @@ CONFIG_PACKAGE_ppp-mod-pppol2tp=y
 # ======================
 # 基础系统配置
 # ======================
-CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_USE_INITTAB=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=100
@@ -481,3 +435,40 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_LOCAL=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_RANDOM_SUPPORT=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_EXPORT_N=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_MODE_X=y
+
+# ======================
+# 硬件驱动精简
+# ======================
+CONFIG_SOUND=n
+CONFIG_HID=n
+CONFIG_NVMEM=n
+CONFIG_REGMAP_SPI=n
+CONFIG_WLAN_VENDOR_INTEL=n
+CONFIG_WLAN_VENDOR_ATH=n
+CONFIG_BT=n
+CONFIG_RFKILL=n
+CONFIG_USB_SERIAL=n
+CONFIG_USB_STORAGE=n
+CONFIG_SCSI=n
+CONFIG_ATA=n
+CONFIG_MMC=n
+CONFIG_RTC_CLASS=n
+CONFIG_FB=n
+CONFIG_VGA_ARB=n
+CONFIG_DRM=n
+CONFIG_AGP=n
+
+# ======================
+# 内核调试移除 (减小体积)
+# ======================
+CONFIG_DEBUG_KERNEL=n
+CONFIG_DEBUG_FS=n
+CONFIG_DEBUG_MISC=n
+CONFIG_DEBUG_LIST=n
+CONFIG_STACKTRACE=n
+CONFIG_KALLSYMS=n
+CONFIG_GDB_SCRIPTS=n
+CONFIG_PROFILING=n
+CONFIG_FTRACE=n
+CONFIG_KPROBES=n
+CONFIG_NET_DROP_MONITOR=n
